Provided changes to the license and other minor corrections